# Chiti

./: .gitignore  Cargo.toml  README.md
blockchain-node/: Cargo.toml
chiti-app/: package.json  vite.config.ts
chiti-app/app/: app.css  root.tsx  routes.ts
chiti-app/app/components/layout/: header.tsx
chiti-app/app/components/ui/: button.tsx  provider.tsx
chiti-app/app/hooks/: useDisclosure.ts
chiti-app/app/routes/: identity-dashboard.tsx
chiti-app/app/routes/identity-creation/: identity-creation.tsx  index.tsx
chiti-app/app/routes/identity-dashboard/: identity-dashboard.tsx  index.tsx
chiti-app/app/routes/identity-dashboard/components/: BirthdayItem.tsx  EventItem.tsx  Feed.tsx  PostCard.tsx  RightSidebar.tsx  Sidebar.tsx
docs/: 1_Features.md  OrgChart.drawio  Untitled Diagram.drawio
docs/protocol-specs/: 0_Blockchain.md  0_Data.md  0_Identity-draft.md  0_Protocol.md
src/: main.rs  util.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  setup.rs
src-tauri/src/identity_core/: mod.rs
src-tauri/src/identity_core/iroh/: mod.rs
src-tauri/src/identity_core/iroh/data/: entry.rs
src-tauri/src/utils/: identity_store.rs  mod.rs  patricia_trie.rs
src/proto/: keys.rs  mod.rs
