[package]
name = "Chiti"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0.95"
derive_more = "2.0.1"
ed25519-dalek = "2.1.1"
rand_core = "0.9.0"
iroh = "0.32.1"
meadowcap = "0.1.0"
postcard = { version = "1", default-features = false, features = [ "alloc", "use-std", "experimental-derive", ] }
willow-data-model = "0.1.0"
willow-store = { git = "https://github.com/n0-computer/willow-store.git", branch = "main" }
ufotofu = { version = "0.4.1", features = ["std"] }
willow-encoding = "0.1.0"
iroh-blobs = "0.32.0"
curve25519-dalek = "4.1.3"
redb = "2.4.0"
rand = "0.9.0"
futures-util = "0.3.31"
tracing = "0.1.41"
futures-lite = "2.6.0"
futures-concurrency = "7.6.3"
bytes = { version = "1.4", features = ["serde"] }
