[package]
name = "chiti-desktop"
version = "0.1.0"
description = "A Chiti Desktop app"
authors = ["nelliairesh@gmail.com"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.1.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
iroh = "0.29.0"
iroh-base = "0.29.0"
tokio = "1.43.0"
anyhow = "1.0.95"
iroh-blobs = { version = "0.29.0", features = ["rpc"] }
willow-data-model = "0.1.0"
meadowcap = "0.1.0"
